--- a/业务技巧/H5小项目/交互简历/index.html
+++ b/业务技巧/H5小项目/交互简历/index.html
@@ -1,33 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>个人交互简介</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--dev 开发环境下 -->
-	<link rel="stylesheet/less" href="css/index.less">
+	<link rel="stylesheet/less" type="text/css" href="css/index.less" />
+	<!-- <script src="https://cdn.bootcss.com/less.js/3.9.0/less.min.js"></script> -->
 	<script src="js/less-2.5.3.min.js"></script>
+	<!-- 自动兼容所有浏览器的插件 (自动加上-webkit-)设置前缀的拆件 -->
+	<script src="js/prefixfree.min.js"></script>
+	<!-- REM计算 -->
+	<script>
+		// 根据当前的设备宽度，动态计算出页面中元素的等比缩放
+		~ function anonymous() {
+			let computedREM = function computedREM() {
+				//获取设备视口宽度
+				let winW = document.documentElement.clientWidth;
+				//设计稿宽度
+				let desW = 640;
+				//计算+设置宽度
+				if (winW >= 640) {
+					document.documentElement.style.fontSize = "100px";
+					return;
+				}
+				document.documentElement.style.fontSize = winW / desW * 100 + "px";
+			};
+			computedREM();
+			window.addEventListener('resize', computedREM);
+		}(window);
+	</script>
 </head>
+
 <body>
 	<main class="mainBox">
 		<!--
 			外面套一层MAIN-BOX:控制当前页面的最大宽度,防止把做好的页面在PC端预览的时候满屏展示,这样字体和盒子大小等被肆意拉伸
 		-->
-		 <!--LOADING-->
+		<!--LOADING-->
 		<section class="loadingBox">
 			<!-- 根据设计稿布局 -->
 			<div class="title">
-				<h1>BigSpinach</h1>
-				<h3>https://github.com/BigSpinach</h3>
+				<!-- <h1>BigSpinach</h1>
+				<h3>https://github.com/BigSpinach</h3> -->
+				<h1>大菠菜</h1>
+				<h3>BigSpinach</h3>
 			</div>
 			<!-- 进度条盒子 -->
 			<div class="progress">
 				<!-- 进度条的部分 -->
 				<div class="current">
-					
-				</div>				
+
+				</div>
 			</div>
 		</section>
+
+		<section class="phoneBox">
+			<div class="phoneTitle">
+				<h2>BigSpinach</h2>
+				<a href="https://github.com/BigSpinach">
+					<h3>https://github.com/BigSpinach</h3>
+				</a>
+
+				<!-- 通话时长 -->
+				<span>00:00</span>
+			</div>
+
+			<!-- 接听电话box -->
+			<div class="answerBox">
+				<!-- 提醒我 -->
+				<a href="javascript:;" class="alarmClick left">
+					<img src="" alt="alarm" class="alarm"/>
+				</a>
+
+				<!-- 发短息 -->
+				<a href="javascript:;" class="messageClick left">
+						<img src="" alt="message" class="message"/>
+				</a>
+
+				<!-- 挂断 -->
+				<a href="javascript:;" class="hangUpClick right">
+						<img src="" alt="hangUp" class="hangUp"/>
+				</a>
+
+				<!-- 接听 -->
+				<a href="javascript:;" class="answerClick right">
+						<img src="" alt="answer" class="answer"/>
+				</a>
+			</div>
+			<div class="hangUpBox">
+				<ul class="menuBox">
+					<li>
+						<div>mute</div>
+					</li>
+					<li>
+						<div>keybord</div>
+					</li>
+					<li>
+						<div>speaker</div>
+					</li>
+					<li>
+						<div>addMore</div>
+					</li>
+					<li>
+						<div>faceTime</div>
+					</li>
+					<li>
+						<div>contacts</div>
+					</li>
+				</ul>
+				<a href="javascript:;" class="hangUpclick">
+					<div class="hangUp">
+						<img src="" alt="hangUp">
+						<span>了解详情</span>
+					</div>
+				</a>
+			</div>
+			<!--AUDIO-->
+			<audio src="audio/bell.mp3" loop preload="none" id="answerBell"></audio>
+			<audio src="audio/say.mp3" preload="none" id="introduction"></audio>
+		</section>
 	</main>
+	<!-- import zepto -->
+	<script src="js/zepto.min.js"></script>
+	<script src="js/index.js"></script>
 </body>
+
 </html>
