add css3 and H5 files

--- a/业务技巧/H5小项目/交互简历/index.html
+++ b/业务技巧/H5小项目/交互简历/index.html
@@ -127,6 +127,27 @@
 			<audio src="audio/bell.mp3" loop preload="none" id="answerBell"></audio>
 			<audio src="audio/say.mp3" preload="none" id="introduction"></audio>
 		</section>
+
+		<!-- messageBox -->
+		<session class="messageBox">
+			<!-- 头部对话框信息 -->
+			<ul class="warpper">
+				<li class="self">
+					<img src="img/zf_messageStudent.png" alt="" class="pic">
+					你好啊！哈哈哈哈
+				</li>
+				<li class="interviewer">
+					<img src="img/zf_messageLogo.png" alt="" class="pic">
+					干嘛？
+				</li>
+			</ul>
+			<!-- 底部键盘操作信息 -->
+			<div class="keyBoardBox">
+				<!-- 展示输入文字的区域 -->
+				<span></span>
+				<a href="javascript:;" class="submit"></a>
+			</div>
+		</session>
 	</main>
 	<!-- import zepto -->
 	<script src="js/zepto.min.js"></script>
