--- a/notes/Vue/01-初识Vue/016-自定义指令.html
+++ b/notes/Vue/01-初识Vue/016-自定义指令.html
@@ -75,8 +75,7 @@
           document.onmousemove = (e) => {
             //重新计算设定盒子的位置
             this.style.left = e.clientX - this.l + "px";
-            this.style.top = e.clientY - this.t + "px";
-          };
+            this.style.top = e.clientY - this.t + "px";0
 
           document.onmouseup = (e) => {
             document.onmousemove = null;
