--- a/notes/Vue/01-初识Vue/06-checkbox的不同.html
+++ b/notes/Vue/01-初识Vue/06-checkbox的不同.html
@@ -15,8 +15,13 @@
   <hr>
   <div id="app">
     <!-- 在vue中，加上的isCheck属性可以管控是否为选中的情况 -->
+    <input type="checkbox" value="不选中" v-model="isCheck">不选中
+
     <input type="checkbox" value="默认选中" v-model="isCheck1">选中
+ 
+  
     <hr>  
+
 
     <br>
     <!-- 如何实现多选 -->
