--- a/notes/Vue/01-初识Vue/07-单选框radio.html
+++ b/notes/Vue/01-初识Vue/07-单选框radio.html
@@ -11,8 +11,9 @@
 <body>
 
   <div id="app">
+    <!-- v-model中的变量的值跟value绑定 即 sex =value -->
     <input type="radio" value="男" v-model="sex">男
-    <input type="radio" valeu="女" v-model="sex">女
+    <input type="radio" value="250" v-model="sex">女
     <br>
     {{sex}}
   </div>
